--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ python:
   - "2.7"
 
 env:
-# TODO enable lint check
-  - VERSION="8.0" LINT_CHECK="0"
+  # - VERSION="8.0" LINT_CHECK="1"
   - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0"
+  - VERSION="8.0" UNIT_TEST="1" LINT_CHECK="0"
 
 virtualenv:
   system_site_packages: true
